third_party/move/move-compiler-v2/tests/checking/naming/generics_shadowing_invalid.move
address 0x2 {

module M {
    struct S has drop {}

    fun foo<S>(s1: S, s2: S): S {
        (s1: Self::S);
        let s: S = S {};
        bar(s1);
        S {}
    }

    fun bar(s: S) {}
}

}
